@@ -65,14 +65,6 @@ SOFTWARE.
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <antlr.version>4.13.2</antlr.version>
-    <argLine>
-        --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
-        --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
-        --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
-        --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
-        --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-        --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-    </argLine>
   </properties>
   <dependencies>
     <dependency>
@@ -112,9 +104,9 @@ SOFTWARE.
       <version>${antlr.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.google.googlejavaformat</groupId>
-      <artifactId>google-java-format</artifactId>
-      <version>1.24.0</version>
+      <groupId>org.eclipse.jdt</groupId>
+      <artifactId>org.eclipse.jdt.core</artifactId>
+      <version>3.10.0</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -147,16 +139,6 @@ SOFTWARE.
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
-        <configuration>
-          <compilerArgs>
-            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-          </compilerArgs>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.antlr</groupId>
@@ -179,9 +161,6 @@ SOFTWARE.
         <artifactId>maven-surefire-plugin</artifactId>
         <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
         <version>3.5.2</version>
-        <configuration>
-          <argLine>@{argLine}</argLine>
-        </configuration>
       </plugin>
     </plugins>
   </build>
